Completed the Quest Agons Hand

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -77,10 +77,10 @@
                           <a href="#holeOfTears">Hole of Tears</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#agonsHand"> Agon's Hand</a>
                         </li>
                         <li>
-                          <a href="#"></a>
+                          <a href="#agonsTest">Agon's Test</a>
                         </li>
                         <li>
                           <a href="#"></a>
@@ -1212,6 +1212,79 @@
                         </ul>
                         <hr> 
                         The prisoner revealed that the dry well in the Kobold camp southeast of Krog is a secret entrance to and evil place.
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Hole of Tears -->
+              <div class="line"></div>
+              <!-- Start of Agon's Hand -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="agonsHand" class="anchor text-center">Agon's Hand</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Minion of Agon
+                          </td>
+                          <td>
+                            <li>EXP</li>
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Agons_Hand_Minion_of_Agon.png" alt="Minion of Agon">
+                        You can find the Minion of Agon down the dry well at the Kobold Camp. Speak to the<span class="light-red"> Minion of Agon</span>, his master has a small request. a pack of foul kobolds invaded this complex and stole pages from the Book of Agon.
+                        He suspects one of the pitiful Cultist followers are assisting the kobold thieves. You will act as Agon's Hand Return the pages                       
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Hand</span><span class="orange">, Confront Cultists in the Shadow Temple southeast of Krog about pages torn from the Book of Agon.</span>
+                        <br>
+                        Kill the <span class="light-red">Cultists</span> <img class="monster-img" src="Images/NPC/Monsters/Cultist.png" alt="Cultist"> with in this complex. As you kill them you will be updated <span class="light-green">The cultist seems to know nothing of the sacred pages...</span>
+                        when you kill the correct one you will be updated <span class="green">QUEST UPDATE: The Cultist looks at you with fear in his eyes. A.. gasp ...Kobold Brigand... unnghh... has the pages... Agon forgive me...</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Hand</span><span class="orange">, The cultist revealed that a Kobold Brigand has the stolen pages from the Book of Agon.</span>
+                        <br>
+                        Kill the <span class="light-red">Kobold Brigands</span> <img class="monster-img" src="Images/NPC/Monsters/Kobold_Brigand.png" alt="Kobold Brigand"> at the Kobold Camp. As you kill them you will be updated <span class="light-green">You found nothing of note on this Kobold Brigand</span>
+                        when you kill the correct one you will be updated <span class="green">QUEST UPDATE: You find a dirty scrap of paper with almost indecipherable writing.</span> <span class="orange"> The page reads... We wreck old temple, Dragoon buy pages for good price</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Hand</span><span class="orange">, Seek the Dragoon who purchased the stolen pages.</span>
+                        <br>
+                        Kill the <span class="light-red">Dragoons</span> <img class="monster-img" src="Images/NPC/Monsters/Dragoon.png" alt="Dragoon"> at the swamp northwest of Krog. As you kill them you will be updated <span class="light-green">You search for pages from the Book of Agon but do not find anything...</span>
+                        when you kill the correct one you will be updated <span class="green">QUEST UPDATE: You find several withered pages of the Book of Agon!</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Hand</span><span class="orange">, You find several withered pages of the Book of Agon! Return them to the Minion of Agon!.</span>
+                        <br>  
+                        The Minion of Agon is very pleaded you have found the pages. Agon grants you access to his worldly sanctuary. Seek his knowledge in the lower temple.                      
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">55,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        Seek the 'Shadow of Agon' in the lower sanctuary...
                       </p>
                       <p class="mt-4 py-3 text-center quest-complete">
                         Quest Complete
