--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -1292,7 +1292,109 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Hole of Tears -->
+              <!-- End of Agon's Hand -->
+              <div class="line"></div>
+              <!-- Start of Agon's Hand -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="agonsTest" class="anchor text-center">Agon's Test</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Shadow of Agon
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Agons_Test_Shadow_Cloak.png" alt="Shadow Cloak" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Agons_Test_Shadow_Cloak_Stats.png' alt='Shadow Cloak Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Agons_Test_Shadow_Gloves.png" alt="Shadow Cloak" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Agons_Test_Shadow_Gloves_Stats.png' alt='Shadow Gloves Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Agons_Test_Shadow_Helm.png" alt="Shadow Cloak" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Agons_Test_Shadow_Helm_Stats.png' alt='Shadow Helm Stats'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Agons_Test_Shadow_Leggings.png" alt="Shadow Cloak" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Agons_Test_Shadow_Leggings_Stats.png' alt='Shadow Leggings Stats'>">
+                            
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Agons_Test_Shadow_of_Agon.png" alt="Shadow of Agon">
+                        Speak to the<span class="light-red"> Shadow of Agon</span>, he seeks to know your devotion to his cause. He asks that you be put though the sacred test to prove your worth. Agon Demands much from his subjects.
+                        He has devised a way to demonstrate your power and loyalty to Agon. The first test is the <span class="light-green">Test of Battle</span>.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, Kill 5 shadows to prove yourself to Agon.</span>
+                        <br>
+                        You are teleported to a room on your own and attacked by <span class="light-red">shadows </span> <img class="monster-img" src="Images/NPC/Monsters/Shadow.png" alt="Shadow"> Kill the 5 shadows that appear then you will
+                        be teleported back to the Shadow of Agon. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, The test is complete. Return to the Shadow of Agon</span>
+                        <br>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Shadow Cloak</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">11,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You have demonstrated your power to Agon! Agon has chosen to reward you with a small gift.. He will allow you to continue to serve him. You must prove your loyalty. Make the Kobolds pay by eliminating their village. The second test is the <span class="light-green">Test of War</span>
+                        <br>
+                        <img class="monster-img" src="Images/NPC/Monsters/Kobold_Mage.png" alt="Kobold Mage"> <img class="monster-img" src="Images/NPC/Monsters/Kobold.png" alt="Kobold"> <img class="monster-img" src="Images/NPC/Monsters/Kobold_Brigand.png" alt="Kobold Brigand">
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, Avenge Agon by destroying thieving Kobolds. Slay 100 in the village that sits atop the temple.</span>
+                        <br>  
+                        Leave the complex by way of the Dry well in the Kobold Camp. Kill 100 Kobolds in the camp. As you kill them you will be updated <Span class="green">Agon's hunger for vengeance has been fed with 100 Kobolds!</Span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, Agon is now satisfied. Bring news of the Kobold annihilation to the Shadow of Agon.</span>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Shadow Gloves</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        Agon's great anger against the Kobolds has been quenched. Agon has chosen to reward you with a small gift. Wearing it will foretell your power to our enemies! Now a final test is required of you.
+                        Agon allows no others to be worshipped in his presence. The rebellious Orcs of Krog refuse to bow to Agon's might. THey cower under the pretentious light of Ulthien, a most detestable deity. Make them pay
+                        for their insolence! You must act as Agon's hand and punish the Orcs. I suggest attacking the outpost guards. This is the <span class="light-green">Test of Insubordination</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, As Agon's Hand, you must punish the Orcs for worshipping Ulthien! Attack an Orc outpost.</span>
+                        <br>
+                        <img class="monster-img" src="Images/NPC/Monsters/Orc_Guard.png" alt="Orc Guard">
+                        <br>  
+                        Return to Krog then head to the far north Orc Outpost. Attack the guard, if you can run away after attacking do this. If not you will be sent to jail. If you get away then return to the Shadow of Agon. If 
+                        not wait your time out in jail then tak the long run back to the Shadow of Agon.  
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Agon's Test</span><span class="orange">, You attempted to punish the Orcs by striking at the Orc Guards.</span>
+                        <br>  
+                        Your skills have proven you worthy. Agon has chosen to reward you with a small gift.. 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Shadow Helm</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Shadow Leggings</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        Agon rewarded you for your loyalty.
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Agon's Hand -->
+              
               <div class="line"></div>
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
