--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -82,49 +82,13 @@
                         <li>
                           <a href="#agonsTest">Agon's Test</a>
                         </li>
-                        <li>
-                          <a href="#"></a>
-                        </li>
-                        <li>
-                          <a href="#"></a>
-                        </li>
-                        <li>
-                          <a href="#"></a>
-                        </li>                        
-                        <li>
-                          <a href="#"></a>
-                        </li>
-                        <li>
-                          <a href="#"></a>
-                        </li>
-                        <li>
-                          <a href="#"></a>
-                        </li>
                     </ul>
                 </li>
                 <li>
                   <a href="#maraketSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Maraket Quest</a>
                   <ul class="collapse list-unstyled" id="maraketSubmenu">
                       <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
+                          <a href="#paymentInFull">Payment in Full</a>
                       </li>
                   </ul>
                 </li>
@@ -132,25 +96,7 @@
                   <a href="#samadSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Samad Quest</a>
                   <ul class="collapse list-unstyled" id="samadSubmenu">
                       <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
-                      </li>
-                      <li>
-                          <a href="#"></a>
+                          <a href="#mokladIsMissing">Moklad is Missing</a>
                       </li>
                   </ul>
                 </li>
@@ -1294,7 +1240,7 @@
               </div>
               <!-- End of Agon's Hand -->
               <div class="line"></div>
-              <!-- Start of Agon's Hand -->
+              <!-- Start of Agon's Test -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
                   <h2 id="agonsTest" class="anchor text-center">Agon's Test</h2>
@@ -1393,9 +1339,175 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Agon's Hand -->
-              
+              <!-- End of Agon's Test -->
               <div class="line"></div>
+              <!-- Start of Payment in Full -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="paymentInFull" class="anchor text-center">Payment in Full</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Dunaga
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Payment_in_Full_Dunagas_Cap.png" alt="Dunaga's Cap" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Payment_in_Full_Dunagas_Cap_Stats.png' alt='Dunaga's Cap Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Payment_in_Full_Dunaga.png" alt="Dunaga">
+                        Speak to <span class="light-red"> Dunaga</span>, in Maraket He needs a favor done. He did some business with Kobolds to the west, but they did not pay him. He built the big fort for them and Dunaga needs money.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Payment in Full</span><span class="orange">, Find the Kobold Fort west of Maraket dunaga expects payment from the Kobold Chief.</span>
+                        <br>
+                        <img class="monster-img" src="Images/BlackSwamp/Payment_in_Full_Kobold_Fort.png" alt="Fort Location"> Head out to the west, stay more north and you will run in the "BIG FORT". When you get their you want to
+                        look for the Chief's hut. Go inside and up the ladder.
+                        <br>
+                        <img class="monster-img" src="Images/NPC/Monsters/Kobold_Chief.png" alt="Kobold Chief"> He will be their with two Kobold Brigands. If he is not their he is on a 1 hour timer. Hang around for an hour or so until he spawns.
+                        Once you kill him you will find a small scrap of paper. 
+                        <br>
+                        <span class="green">QUEST UPDATED:</span><span class="red"> Payment in Full</span><span class="orange">, You found a small scrap of paper. Return to Dunaga in Maraket.</span>
+                        <br>
+                        When reach Maraket, speak to Dunaga. He will not be happy with the small scrap of paper. It is a Kobold bank note, Dunaga can't do anything with this, so no reward for you now.
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 1</strong> That's ok. I'm not interested in a reward..</li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">OPTION: 2</strong> Tell her she is one lucky lady.</li>
+                        </ul>
+                        <hr>
+                        <strong class="light-blue">OPTION: 1</strong>
+                        <br>
+                        He says you are very wise I no get paid, you no get paid, but at least dirty Chief is dead...
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">16,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        <strong class="light-blue">OPTION: 2</strong>
+                        <br>
+                        He was only kidding, we had deal. Here is your reward, I have old junk cap for you...
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Dunaga's Cap</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">11,550</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Payment in Full  -->
+              <div class="line"></div>
+              <!-- Start of Moklad is Missing -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="mokladIsMissing" class="anchor text-center">Moklad is Missing</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Jeqa or Moklad's Journal
+                          </td>
+                          <td>
+                            EXP
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Moklad_is_Missing_Jeqa.png" alt="Jeqa">
+                        Speak to <span class="light-red"> Jeqa</span>, in Samad. She is worried about her husband Moklad. He has been gone for weeks. He left for simple bat hunt and not return. Last she head they headed off to the east. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Moklad is Missing</span><span class="orange">, You met Jeqa the Orc in Samad, who asked you to find her husband Moklad the Bat Hunter.</span>
+                        <br>
+                        Head out to the east following the road untill you hit the mountain range. Search north in one of the mountain crevices.
+                        <br>
+                        <img class="monster-img" src="Images/BlackSwamp/Moklad_is_Missing_Journal.png" alt="Moklad's Journal"> You will come to a red Book on the ground. You read it and find out it is Moklad's Journal
+                        and his corpse next to the book. Return to Jeqa to inform her of the bad news.
+                        <br>
+                        <span class="green">You have found Moklad's Journal. Return to Samad with news.</span>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Moklad is Missing</span><span class="orange">, You have found Moklad's Journal. Return to Jeqa in Samad with news..</span>
+                        <br>
+                        Return to Jeqa, inform her of her husbands death. She is in tears over the death of Moklad. She ask you to inform his brother Kongodo. He is in dawat.
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">550</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Moklad is Missing</span><span class="orange">, Find Kongodo in the town of Dawat. Tell him the sad news about his brother.</span>
+                        <br>
+                        Head out to the east following the road go northeast across the river. Keep following the road east and you will run in to Dawat.
+                        <br>
+                        <img class="monster-img" src="Images/BlackSwamp/Moklad_is_Missing_Kongodo.png" alt="Jeqa">
+                        <span class="light-red">Kongodo</span> is on the north side of the town by the spawn gate. Tell him the bad news that Moklad is dead.
+                        He ask if you told this news to his wife. Yes Jeqa sent me to find you. He hopes she is taking this bad news well. He would return to Samad to comfort her, but he is very busy here with work.
+                        Perhaps you could tell Jeqa that she is in his thoughts. He thanks you for coming to tell him this dreadful news. Perhaps you will return here to learn more of my work after you have spoken to Jeqa. 
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,100</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Moklad is Missing</span><span class="orange">, Moklad's brother asked you to give his condolences to Jeqa in Samad.</span>
+                        <br>
+                        Return to Jeqa, shes not worried that the news is known. She will try to go on without Moklad.
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,100</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You consoled the widow Jeqa about the loss of her husband.
+                      </p>
+                      <p class="mt-4 py-3 text-center quest-complete">
+                        Quest Complete
+                      </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of Moklad is Missing  -->
+              <div class="line"></div>
+
+
               <!-- Start of The Art of Combat -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
