Completed the menu links

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -161,7 +161,10 @@
                              <li><a class="head" href="#stingOperation">Sting Operation</a></li>
                              <li><a class="head" href="#protectKrog">Protect Krog</a></li>
                              <li><a class="head" href="#treeTrouble">Tree Trouble</a></li>
-                             <li><a class="head" href="#swamped">Swamped</a></li>
+                             <li><a class="head" href="#greatDisrepair">Great Disrepair</a></li>
+                             <li><a class="head" href="#holeOfTears">Hole of Tears</a></li>
+                             <li><a class="head" href="#agonsHand">Agon's Hand</a></li>
+                             <li><a class="head" href="#agonsTest">Agon's Test</a></li>
                           </ul>
                           <!-- menu-submenu accordon-content-->
                                <li id="nav4" class="toggle accordion-toggle"> 
@@ -170,10 +173,7 @@
                           </li>
                           <!-- accordion-toggle -->
                           <ul class="menu-submenu accordion-content">
-                             <li><a class="head" href="#"></a></li>
-                             <li><a class="head" href="#"></a></li>
-                             <li><a class="head" href="#"></a></li>
-                             <li><a class="head" href="#"></a></li>
+                             <li><a class="head" href="#paymentInFull">Payment in Full</a></li>
                           </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav6" class="toggle accordion-toggle"> 
@@ -182,10 +182,7 @@
                          </li>
                          <!-- accordion-toggle -->
                          <ul class="menu-submenu accordion-content">
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
-                          <li><a class="head" href="#"></a></li>
+                          <li><a class="head" href="#mokladIsMissing">Moklad is Missing</a></li>
                          </ul>
                          <!-- menu-submenu accordon-content-->
                          <li id="nav7" class="toggle accordion-toggle"> 
