Started A Shadow Roams the Lands

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -150,7 +150,7 @@
                           </li>
                           <li id="nav3" class="toggle accordion-toggle"> 
                              <span class="icon-plus"></span>
-                             <a class="menu-link" href="#">Krog Quest</a>
+                             <a class="menu-link" href="#">Whisperdale Quest</a>
                           </li>
                           <!-- accordion-toggle -->
                           <ul id="menu-scroll" class="menu-submenu accordion-content">
@@ -412,27 +412,26 @@
 
                     <hr>
                     <p class="clearfix">
-                        <img class="npc-img" src="Images/BlackSwamp/Leonard_is_Lost_Oonga.png" alt="Oonga">
-                        Speak to <span class="light-red">Oonga</span> He is crying about someone or something named Leonard. Leonard is Oonga special friend. He is hiding from Oonga help him find Leonard. 
-                        He gives you a hint that Leonard is lazy and likes to take a nap in a barrel-thing.
+                        <img class="npc-img" src="Images/Darkwoods/A_Shadow_Roams_The_Lands_Varios.png" alt="Varios">
+                        Speak to <span class="light-red">Varios</span>, He ask you what brings you to Whisperdale. <span class="orange">*Before you can anwser he cuts you off*</span> Hopes its not for hunting. Undead creatures called shadows stalk the hunting grounds.
+                        Lord Vezryl's Estate. It was fine shady forest and wooded vale teeming with full fleshed deer. Now you'd be lucky to take a scrawny doe, much less a stag. He often daydreams that he could visit again. You accect to hunt the Shadows for him.  
                         <br>
-                        <span class="green">QUEST RECEIVED:</span><span class="red"> Leonard is Lost</span><span class="orange">, You agreed to help Oonga of Krog find Leonard, a lost pet.</span>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> A Shadow Roams the Lands</span><span class="orange">, Eliminate 25 Shadows for Varios of Whisperdale.</span>
                         <br>
-                        There are many barrels in the town to search. The barrel you are looking for is the one on the west side of the government hall. <img class="npc-img" src="Images/BlackSwamp/Leonard_is_Lost_Leonard_barrel.png" alt="Leonards barrel">
-                        When you search the barrel. A strong stench flows forth from the barrel as you per inside. At the bottome lies what looks like it may have been a squirrel at one time. You gently pick up the partially decayed remains,
-                        brushing flies away with your other hand. Placeing the carcass into a small leather sack, you ponder how you will break the news to Oonga.
-                        <br>
-                        <span class="green">QUEST UPDATE:</span><span class="red"> Leonard is Lost</span><span class="orange">, Return to Oonga with Leonard's remains.</span>
-                        <br>
-                        He thanks you for finding Leonard and scoldes Leonard for being a bad pet.  
-                        <hr>
+                         Journey on the road leading out of the city. Continue north at the fork to Lord Vezryl's Estate. West from there you will find foul apparitions to slake you courage.
+                         <br>
+                         <img class="monster-img" src="Images/NPC/Monsters/Shadow.png" alt="Shadow"> Once you find them kill 25 of them. You will be updated as you kill them. <span class="green">You've killed 25 Shadows for Varios.</span> When you have slain 25 return to Varios.
+                         <br>
+                         <span class="green">QUEST RECEIVED:</span><span class="red"> A Shadow Roams the Lands</span><span class="orange">, Return to Varios with news of the Shadow extermination!</span>
+                         <br>
+                         He is suprised that you accomplished this task. You have proven him wrong. He will soon venture to the lodge to meet his friend Burslord. They have been planning a trip for some time. He thanks you with a trifle of gold.
+                          <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 350</span></li>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 250 faction with the city of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">660</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 2,500</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">27,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
                         <hr> 
-                        You reunited Oonga with Leonard. 
+                        Varios can now venture to Lord Vezryl's estate! He paid you handsomely.
                     </p>
                     <p class="mt-4 py-3 text-center quest-complete">
                       Quest Complete
