Completed  Termigon Armor Quest

--- a/darkWoods.html
+++ b/darkWoods.html
@@ -391,7 +391,7 @@
                         </tr>
                         <tr>
                           <td>Apprentice</td>
-                          <td>Searching</td>                        
+                          <td>Combat</td>                        
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -405,7 +405,7 @@
                             Varios
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Leonard_is_Lost_Gold_350.png' alt='Gold 350'>">
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/A_Shadow_Roams_The_Lands_Gold_2500.png' alt='Gold 2500'>">
 
                           </td>                        
                     </table>
@@ -442,7 +442,73 @@
               </div>
               <!-- End of A Shadow Roams the Lands -->
               <div class="line"></div>
-              
+              <!-- Start of Time for Revenge  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="timeForRevenge" class="anchor text-center">Time for Revenge</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Varios
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Darkwoods/A_Shadow_Roams_The_Lands_Gold_5000.png' alt='Gold 5000'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Darkwoods/A_Shadow_Roams_The_Lands_Varios.png" alt="Varios">
+                        After completeing A Shadow Roams the lands speak to <span class="light-red">Varios</span>, to the east lies a hive of termigons. He was helping his friend Burslord to collect some material for a project 
+                        when their queen fled with his timepiece and buried it among the mounds. He is curious whether you can kill the Termigon Queen and rturn his timepiece. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Time for Revenge</span><span class="orange">, Find the termigon hive, destroy the Queen, reclaim Varios' time piece.</span>
+                        <br>
+                         Head east across the river then south around the mountain. This is the Termigon hive. Find the <span class="light-red">Termigon Queen</span> 
+                         <br>
+                         <img class="monster-img" src="Images/NPC/Monsters/Termigon_Queen.png" alt="Termigon Queen"> with in this area and kill it.
+                         <br>
+                         <span class="green">QUEST UPDATE:</span><span class="red"> Time for Revenge</span><span class="orange">, You found Varios's Timepiece! Return it to him in Whisperdale.</span>
+                         <br>
+                         It would be quite rude fi there was no compensation for your efforts. You must visit the hunting lodge and speak with my friend Burslord. He is eager to meet you and see if I have been truthful.
+                          <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 5,000</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">38,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr> 
+                        You havce earned Varios respect and his gold. He commends you to Burslord.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Time for Revenge -->
+              <div class="line"></div>
               <div class="line"></div>
 
 
